--- a/code/threads/Makefile.depends
+++ b/code/threads/Makefile.depends
@@ -55,7 +55,10 @@ thread_test_garden.o: ../threads/thread_test_garden.cc \
  ../lib/list.hh ../lib/utility.hh ../machine/interrupt.hh \
  ../machine/statistics.hh ../machine/timer.hh
 thread_test_prod_cons.o: ../threads/thread_test_prod_cons.cc \
- ../threads/thread_test_prod_cons.hh
+ ../threads/thread_test_prod_cons.hh ../threads/condition.hh \
+ ../threads/lock.hh ../threads/semaphore.hh ../threads/thread.hh \
+ ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh ../lib/debug_opts.hh \
+ ../machine/system_dep.hh ../lib/list.hh ../lib/utility.hh
 thread_test_simple.o: ../threads/thread_test_simple.cc \
  ../threads/thread_test_simple.hh ../threads/system.hh \
  ../threads/thread.hh ../lib/utility.hh ../lib/assert.hh ../lib/debug.hh \
